--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <script src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WildParis</title>
+    <title>WildParis - покупайте достопримечательности выгодно!</title>
+    <meta name="description" content="Купить достопримечательности со всех стран мира дёшево и со вкусом">
 </head>
 <body>
     <header>
